# synthbone

./: .README.md.swp  .gitignore  .gitmodules  Cargo.toml  README.md  bad.raw  badbad.raw  build.sh
.cargo/: config
alsa-rs/: Cargo.toml
alsa-rs/src/: lib.rs
alsa-rs/src/alsa/: alsa.rs  error.rs  mod.rs  pcm.rs
opus-rs/: Cargo.toml
opus-rs/rust-opus/: .gitignore  README.md
opus-rs/rust-opus/opus-sys/: Cargo.toml
opus-rs/rust-opus/opusfile-sys/: Cargo.toml  build.rs
opus-rs/rust-opus/opusfile-sys/src/: lib.rs
opus-rs/src/: lib.rs
python/: controller.py  old_controller.py
sound/: Cargo.toml
sound/examples/: main.rs
sound/src/: lib.rs  pink.rs  white.rs
src/: main.rs  mute.rs  pc.rs  pink.rs  speaker.rs  synth.rs
