[package]
name = "alsa"
version = "0.2.0"
authors = ["David Henningsson <diwic@ubuntu.com>"]

description = "Thin but safe wrappers for ALSA (Linux sound API)"
repository = "https://github.com/diwic/alsa-rs"
documentation = "http://docs.rs/alsa"
keywords = ["ALSA", "audio", "sound"]
license = "Apache-2.0/MIT"
categories = ["multimedia::audio", "api-bindings"]
readme = "README.md"

[dependencies]
libc = "0.2.21"
nix = "0.9"

[features]
default = []
microphone = []
speaker = []
