[package]
name = "opus"
version = "0.2.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Safe Rust bindings for libopus"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["opus", "codec", "voice", "sound", "audio"]
categories = ["api-bindings", "encoding", "compression",
	"multimedia::audio", "multimedia::encoding"]

repository = "https://github.com/SpaceManiac/opus-rs"
documentation = "https://wombat.platymuus.com/rustdoc/opus_0.2.0/"

[dependencies]
lazy_static = "0.2"
libc = "0.2"
dl_api = "0.1"
