[package]
name = "opusfile-sys"
version = "0.2.0"
authors = ["Tero Hänninen <lgvz@users.noreply.github.com>"]
description = "Bindings to libopusfile"
license = "MIT"
keywords = ["bindings", "opusfile"]
repository = "https://github.com/lgvz/rust-opus"
links = "opusfile"
build = "build.rs"

[dependencies]
libc = "0.2"
ogg-sys = "0.0.9"
opus-sys = "0.2"

[build-dependencies]
pkg-config = "0.3.8"
