[package]
name = "opusfile-sys"
version = "0.2.0"
authors = ["Tero Hänninen <lgvz@users.noreply.github.com>"]
description = "Bindings to libopusfile"
license = "MIT"
keywords = ["bindings", "opusfile"]
repository = "https://github.com/lgvz/rust-opus"
links = "opusfile"

[dependencies]
libc = "0.2"
ogg-sys = "0.0.9"
opus-sys = { path = "../opus-sys" }
